--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -30,21 +30,11 @@
   border-radius: 4px;
 
   transition: border-color 250ms var(--timing-function);
-}
 
-.modal-form-input:focus {
-  border-color: var(--accent-color);
-  outline: none;
-}
-
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
-}
-
-.modal-form-input-wrapper {
-  position: relative;
-  display: block;
-  margin-top: 4px;
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
 }
 
 .modal-form-icon {
@@ -57,6 +47,16 @@
   margin: 0;
 
   transition: fill 250ms var(--timing-function);
+
+  .modal-form-input:focus + & {
+    fill: var(--accent-color);
+  }
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+  margin-top: 4px;
 }
 
 .modal-form-message {
@@ -73,43 +73,43 @@
   border-radius: 4px;
 
   transition: border-color 250ms var(--timing-function);
-}
 
-.modal-form-message:focus {
-  border-color: var(--accent-color);
-  outline: none;
-}
-
-.modal-form-message::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-form-checkbox-policy::before {
-  content: '';
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 7px;
-  cursor: pointer;
-
-  width: 14px;
-  height: 13px;
-  border: 2px solid #212121;
-  border-radius: 2px;
-}
-
-.modal-form-checkbox:focus + .modal-form-checkbox-policy::before {
-  outline: 2px solid var(--accent-color);
-}
-
-.modal-form-checkbox:checked + .modal-form-checkbox-policy::before {
-  background-image: url('../images/icon-check.svg');
-  background-size: cover;
-  background-origin: border-box;
-  border: 2px solid var(--accent-color);
+  &:focus {
+    border-color: var(--accent-color);
+    outline: none;
+  }
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 
 .modal-form-checkbox-policy {
   margin-bottom: 30px;
+
+  &::before {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 7px;
+    cursor: pointer;
+
+    width: 14px;
+    height: 13px;
+    border: 2px solid #212121;
+    border-radius: 2px;
+  }
+}
+
+.modal-form-checkbox {
+  &:focus + .modal-form-checkbox-policy::before {
+    outline: 2px solid var(--accent-color);
+  }
+  &:checked + .modal-form-checkbox-policy::before {
+    background-image: url('../images/icon-check.svg');
+    background-size: cover;
+    background-origin: border-box;
+    border: 2px solid var(--accent-color);
+  }
 }
 
 .modal-form-policy-link {
