--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -17,20 +17,20 @@
   border-radius: 4px;
 
   transition: border-color 250ms var(--timing-function);
-}
 
-.client-link:hover,
-.client-link:focus {
-  border-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+  }
 }
 
 .client-icon {
   fill: #afb1b8;
 
   transition: fill 250ms var(--timing-function);
-}
 
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-  fill: var(--accent-color);
+  .client-link:hover &,
+  .client-link:focus & {
+    fill: var(--accent-color);
+  }
 }
