--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -29,9 +29,10 @@
 
 .footer-item {
   margin-bottom: 9px;
-}
-.footer-item:last-child {
-  margin-bottom: 0;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .address {
@@ -50,10 +51,11 @@
   letter-spacing: 0.02em;
 
   transition: color 250ms var(--timing-function);
-}
-.footer-contact:hover,
-.footer-contact:focus {
-  color: var(--accent-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .social-list-title {
@@ -75,11 +77,11 @@
   background-color: rgba(255, 255, 255, 0.1);
 
   transition: background-color 250ms var(--timing-function);
-}
 
-.footer .social-list-link:hover,
-.footer .social-list-link:focus {
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
 .footer .social-list-icon {
@@ -142,11 +144,11 @@
   border-radius: 4px;
 
   transition: background-color 250ms var(--timing-function);
-}
 
-.footer-form-button:hover,
-.footer-form-button:focus {
-  background-color: var(--accent-hover-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-hover-color);
+  }
 }
 
 .footer-form-icon {
