--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -46,28 +46,28 @@
   letter-spacing: 0.02em;
 
   transition: color 250ms var(--timing-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
-.nav-list .link:hover,
-.nav-list .link:focus {
-  color: var(--accent-color);
-}
-
-.nav-list .link.current {
+.link.current {
   position: relative;
   color: var(--accent-color);
-}
 
-.link.current::after {
-  position: absolute;
-  bottom: -1px;
-  content: '';
-  display: block;
+  &::after {
+    position: absolute;
+    bottom: -1px;
+    content: '';
+    display: block;
 
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
 }
 
 .contacts-nav {
@@ -90,11 +90,11 @@
   letter-spacing: 0.02em;
 
   transition: color 250ms var(--timing-function);
-}
 
-.contact-link:hover,
-.contact-link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .header-container,
@@ -103,14 +103,14 @@
   align-items: center;
 }
 
-.contact-link:hover .contact-icon,
-.contact-link:focus .contact-icon {
-  fill: var(--accent-color);
-}
-
 .contact-icon {
   margin-right: 10px;
   fill: var(--primery-text-color);
 
   transition: fill 250ms var(--timing-function);
+
+  .contact-link:hover &,
+  .contact-link:focus & {
+    fill: var(--accent-color);
+  }
 }
