--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -24,15 +24,15 @@
   cursor: pointer;
 
   transition: background-color 250ms var(--timing-function), color 250ms var(--timing-function);
-}
 
-.button:hover,
-.button:focus,
-.button:active {
-  color: var(--primery-bgc);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:hover,
+  &:focus,
+  &:active {
+    color: var(--primery-bgc);
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 /* ============ Galery section ============*/
@@ -42,25 +42,24 @@
   flex-wrap: wrap;
 }
 
-.gallery-item {
-  width: 370px;
-}
-
 .gallery-link {
   display: inline-block;
 }
+.gallery-item {
+  width: 370px;
 
-.gallery-item:hover,
-.gallery-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
 
-.gallery-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-.gallery-item:not(:nth-last-child(-n + 3)) {
-  margin-bottom: 30px;
+  &:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
 }
 
 .gallery-image-thumb {
@@ -87,10 +86,20 @@
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.gallery-link:hover .hover-overlay,
-.gallery-link:focus .hover-overlay {
-  opacity: 1;
-  transform: translateY(0);
+.gallery-text {
+  font-size: 16px;
+  line-height: 1.87;
+}
+
+.gallery-link {
+  color: var(--primery-text-color);
+  text-decoration: none;
+
+  &:hover .hover-overlay,
+  &:focus .hover-overlay {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .item-description-text {
@@ -116,14 +125,4 @@
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-}
-
-.gallery-link {
-  color: var(--primery-text-color);
-  text-decoration: none;
-}
-
-.gallery-text {
-  font-size: 16px;
-  line-height: 1.87;
 }
