Добавлен placeholder.scss

--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -8,9 +8,7 @@
 }
 
 .client-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %display-center;
   width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
