--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,12 @@
   overflow: hidden;
 }
 
+.social-list-link, .close-button, .advantages-icon-container, .client-link, .footer-form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -106,9 +112,6 @@ body {
 }
 
 .social-list-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 44px;
   height: 44px;
   background-color: transparent;
@@ -180,9 +183,6 @@ body {
   right: 8px;
   bottom: 543px;
   left: 490px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   fill: var(--web-color);
   padding: 0;
   width: 30px;
@@ -491,9 +491,6 @@ body {
 }
 
 .advantages-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
@@ -591,9 +588,6 @@ body {
 }
 
 .client-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 170px;
   height: 92px;
   border: 1px solid #afb1b8;
@@ -731,9 +725,6 @@ body {
 }
 
 .footer-form-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 200px;
   height: 50px;
   margin: 0;
