--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -20,9 +20,7 @@
   bottom: 543px;
   left: 490px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %display-center;
 
   fill: var(--web-color);
   padding: 0;
