--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -4,9 +4,7 @@
 }
 
 .social-list-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @extend %display-center;
   width: 44px;
   height: 44px;
   background-color: transparent;
