--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -26,9 +26,7 @@
 }
 
 .advantages-icon-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %display-center;
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
