--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 // UTILS
 @import './utils/variables';
 @import './utils/visually-hidden';
+@import './utils/placeholders';
 
 // BASE
 @import './base/common';
