--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -7,9 +7,8 @@
 
   color: var(--title-text-color);
 
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font();
+
   text-transform: uppercase;
 }
 
