--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -133,9 +133,9 @@
   cursor: pointer;
 
   font-family: inherit;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
+  
+  @include font(16px, 700, 1.87);  
+
   letter-spacing: 0.06em;
 
   color: var(--primery-bgc);
