--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,9 +10,8 @@
   color: var(--web-color);
 
   font-family: Raleway, sans-serif;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.2;
+
+  @include font(26px, 700, 1.2);
 }
 
 .accent-logo {
