--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -20,9 +20,8 @@
 
   color: var(--primery-bgc);
 
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  @include font(44px, 900, 1.36);
+
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
@@ -40,9 +39,9 @@
   cursor: pointer;
 
   font-family: inherit;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
+
+  @include font(16px, 700, 1.87);
+
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
