--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -34,9 +34,8 @@
 
   color: var(--title-text-color);
 
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
+  @include font(16px, 500, 1.18);
+
   text-align: center;
 }
 
