--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -17,9 +17,9 @@
   color: var(--title-text-color);
   background-color: var(--secondary-bgc);
   font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
+
+  @include font(16px, 500, 1.62);
+
   text-align: center;
   cursor: pointer;
 
