добавлены еще mixins

--- a/sass/components/_modal-button.scss
+++ b/sass/components/_modal-button.scss
@@ -1,8 +1,9 @@
 .modal-form-button {
   display: block;
   margin: 0 auto;
-  width: 200px;
-  height: 50px;
+
+  @include dimensions(200px, 50px);
+
   cursor: pointer;
 
   font-size: 16px;
