--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -3,8 +3,7 @@
   top: 0;
   left: 0;
 
-  width: 100%;
-  height: 100%;
+  @include dimensions(100%, 100%);
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 100;
 
