--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -61,8 +61,7 @@
 
 .modal-form-message {
   margin-top: 4px;
-  width: 100%;
-  height: 120px;
+  @include dimensions(100%, 120px);
   resize: none;
   padding: 12px 16px;
   font-size: 12px;
