--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -5,8 +5,8 @@
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms var(--timing-function);
 
-  width: 528px;
-  height: 581px;
+  @include dimensions(528px, 581px);
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -24,8 +24,7 @@
 
   fill: var(--web-color);
   padding: 0;
-  width: 30px;
-  height: 30px;
+  @include dimensions(30px, 30px);
   cursor: pointer;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
