--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -40,9 +40,7 @@
 
   color: var(--title-text-color);
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font(14px, 500, 1.14);
   letter-spacing: 0.02em;
 
   transition: color 250ms var(--timing-function);
@@ -63,8 +61,7 @@
     content: '';
     display: block;
 
-    width: 100%;
-    height: 4px;
+    @include dimensions(100%, 4px);
     border-radius: 2px;
     background-color: var(--accent-color);
   }
@@ -84,9 +81,7 @@
   align-items: center;
   color: var(--primery-text-color);
 
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  @include font($fw: 500);
   letter-spacing: 0.02em;
 
   transition: color 250ms var(--timing-function);
