--- a/sass/pages/_portfolio.scss
+++ b/sass/pages/_portfolio.scss
@@ -81,8 +81,9 @@
 
   display: block;
   justify-content: center;
-  width: 100%;
-  height: 294px;
+
+  @include dimensions(100%, 294px);
+
   background-color: rgba(33, 150, 243, 0.9);
 }
 
@@ -121,8 +122,6 @@
 
   color: var(--title-text-color);
 
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 2;
+  @include font(18px, 700, 2);
   letter-spacing: 0.06em;
 }
