--- a/css/main.css
+++ b/css/main.css
@@ -137,8 +137,8 @@ body {
 
 .section-title {
   color: var(--title-text-color);
-  font-weight: bold;
   font-size: 36px;
+  font-weight: 700;
   line-height: 1.16;
   text-align: center;
 }
@@ -310,18 +310,21 @@ body {
   color: var(--accent-color);
 }
 
-.page-header {
+.header {
   border-bottom: 1px solid #ececec;
 }
 
 /* =========== Стилизация логотипа =========*/
 .logo {
+  font-family: Raleway, sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.header__logo {
   margin-right: 93px;
   color: var(--web-color);
-  font-family: Raleway, sans-serif;
-  font-weight: bold;
-  font-size: 26px;
-  line-height: 1.2;
 }
 
 .accent-logo {
@@ -329,41 +332,36 @@ body {
 }
 
 /* ============== Стилизация панели навигации =====*/
-.navigation a,
-.contacts-nav a {
-  text-decoration: none;
-}
-
-.nav-list {
+.menu {
   display: flex;
 }
 
-.nav-list .item + .item {
+.menu__item + .menu__item {
   margin-left: 50px;
 }
 
-.nav-list .link {
+.menu__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
   color: var(--title-text-color);
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color 250ms var(--timing-function);
 }
 
-.nav-list .link:hover, .nav-list .link:focus {
+.menu__link:hover, .menu__link:focus {
   color: var(--accent-color);
 }
 
-.link.current {
+.menu__link.current {
   position: relative;
   color: var(--accent-color);
 }
 
-.link.current::after {
+.menu__link.current::after {
   position: absolute;
   bottom: -1px;
   content: '';
@@ -374,44 +372,44 @@ body {
   background-color: var(--accent-color);
 }
 
-.contacts-nav {
+.contacts {
   display: flex;
   margin-left: auto;
 }
 
-.contacts-nav .item + .item {
+.contacts__item + .contacts__item {
   margin-left: 50px;
 }
 
-.contact-link {
+.contacts__link {
   display: flex;
   align-items: center;
   color: var(--primery-text-color);
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color 250ms var(--timing-function);
 }
 
-.contact-link:hover, .contact-link:focus {
+.contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
 }
 
 .header-container,
-.navigation {
+.header__nav {
   display: flex;
   align-items: center;
 }
 
-.contact-icon {
+.contacts__icon {
   margin-right: 10px;
   fill: var(--primery-text-color);
   transition: fill 250ms var(--timing-function);
 }
 
-.contact-link:hover .contact-icon,
-.contact-link:focus .contact-icon {
+.contacts__link:hover .contacts__icon,
+.contacts__link:focus .contacts__icon {
   fill: var(--accent-color);
 }
 
@@ -434,8 +432,8 @@ body {
 .hero-title {
   margin-bottom: 30px;
   color: var(--primery-bgc);
-  font-weight: 900;
   font-size: 44px;
+  font-weight: 900;
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
@@ -452,8 +450,8 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   font-family: inherit;
-  font-weight: bold;
   font-size: 16px;
+  font-weight: 700;
   line-height: 1.87;
   align-items: center;
   text-align: center;
@@ -472,8 +470,8 @@ body {
 .advantages-list .title {
   margin-bottom: 10px;
   color: var(--title-text-color);
-  font-weight: bold;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
 }
@@ -565,8 +563,8 @@ body {
 .team-list .title {
   margin-bottom: 10px;
   color: var(--title-text-color);
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.18;
   text-align: center;
 }
@@ -633,8 +631,8 @@ body {
   margin-bottom: 20px;
   color: var(--primery-bgc);
   font-family: Raleway, sans-serif;
-  font-weight: bold;
   font-size: 26px;
+  font-weight: 700;
   line-height: 1.2;
 }
 
@@ -655,8 +653,8 @@ body {
 
 .footer-contact {
   color: rgba(255, 255, 255, 0.6);
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color 250ms var(--timing-function);
@@ -705,8 +703,8 @@ body {
 .footer-form-title {
   margin-bottom: 20px;
   color: var(--primery-bgc);
-  font-weight: bold;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
 }
@@ -731,8 +729,8 @@ body {
   padding: 0;
   cursor: pointer;
   font-family: inherit;
-  font-weight: bold;
   font-size: 16px;
+  font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: var(--primery-bgc);
@@ -769,8 +767,8 @@ body {
   color: var(--title-text-color);
   background-color: var(--secondary-bgc);
   font-family: inherit;
-  font-weight: 500;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.62;
   text-align: center;
   cursor: pointer;
@@ -862,8 +860,8 @@ body {
 .gallery-items .title {
   margin-bottom: 4px;
   color: var(--title-text-color);
-  font-weight: bold;
   font-size: 18px;
+  font-weight: 700;
   line-height: 2;
   letter-spacing: 0.06em;
 }
