--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
   overflow: hidden;
 }
 
-.social-list-link, .close-button, .advantages-icon-container, .client-link, .footer-form-button {
+.social-list-link, .close-button, .advantages__icon-container, .client-link, .footer-form-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -429,7 +429,7 @@ body {
   margin-right: auto;
 }
 
-.hero-title {
+.hero__title {
   margin-bottom: 30px;
   color: var(--primery-bgc);
   font-size: 44px;
@@ -440,7 +440,7 @@ body {
   text-transform: uppercase;
 }
 
-.main-button {
+.hero__button {
   display: inline-block;
   border-radius: 4px;
   min-width: 200px;
@@ -459,7 +459,7 @@ body {
   transition: background-color 250ms var(--timing-function);
 }
 
-.main-button:hover, .main-button:focus {
+.hero__button:hover, .hero__button:focus {
   background-color: var(--accent-hover-color);
 }
 
@@ -467,7 +467,7 @@ body {
   padding-bottom: 47px;
 }
 
-.advantages-list .title {
+.advantages__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-size: 14px;
@@ -476,47 +476,47 @@ body {
   text-transform: uppercase;
 }
 
-.advantages-list {
+.advantages__list {
   display: flex;
 }
 
-.advantages-item {
+.advantages__item {
   width: 270px;
 }
 
-.advantages-item:not(:last-child) {
+.advantages__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.advantages-icon-container {
+.advantages__icon-container {
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
   background-color: #f5f4fa;
 }
 
-.work-list {
-  display: flex;
-}
-
-.work-item + .work-item {
-  margin-left: 30px;
-}
-
-.work-item {
-  position: relative;
-  width: 370px;
-}
-
 .ourwork-section {
   padding-top: 47px;
 }
 
-.ourwork-section .section-title {
+.ourwork__list {
+  display: flex;
+}
+
+.ourwork__item + .ourwork__item {
+  margin-left: 30px;
+}
+
+.ourwork__item {
+  position: relative;
+  width: 370px;
+}
+
+.ourwork__title {
   margin-bottom: 50px;
 }
 
-.work-text {
+.ourwork__text {
   position: absolute;
   bottom: 0;
   right: 0;
@@ -530,7 +530,7 @@ body {
   background-color: rgba(47, 48, 58, 0.8);
 }
 
-.team-section .section-title {
+.team__title {
   margin-bottom: 50px;
 }
 
@@ -538,29 +538,29 @@ body {
   background-color: var(--secondary-bgc);
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-item + .team-item {
+.team__item + .team__item {
   margin-left: 30px;
 }
 
-.team-item {
+.team__item {
   width: 270px;
   background-color: var(--primery-bgc);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-item-description {
+.team__item-wrapper {
   margin-top: 30px;
   margin-bottom: 30px;
   padding-left: 32px;
   padding-right: 32px;
 }
 
-.team-list .title {
+.team__name {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-size: 16px;
@@ -569,7 +569,7 @@ body {
   text-align: center;
 }
 
-.team-list .text {
+.team__text {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.18;
