--- a/sass/layout/_advantages.scss
+++ b/sass/layout/_advantages.scss
@@ -2,7 +2,7 @@
   padding-bottom: 47px;
 }
 
-.advantages-list .title {
+.advantages__title {
   margin-bottom: 10px;
 
   color: var(--title-text-color);
@@ -12,11 +12,11 @@
   text-transform: uppercase;
 }
 
-.advantages-list {
+.advantages__list {
   display: flex;
 }
 
-.advantages-item {
+.advantages__item {
   width: 270px;
 
   &:not(:last-child) {
@@ -24,7 +24,7 @@
   }
 }
 
-.advantages-icon-container {
+.advantages__icon-container {
   @extend %display-center;
 
   @include dimensions(270px, 120px);
