--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -1,4 +1,4 @@
-.team-section .section-title {
+.team__title {
   margin-bottom: 50px;
 }
 
@@ -6,15 +6,15 @@
   background-color: var(--secondary-bgc);
 }
 
-.team-list {
+.team__list {
   display: flex;
 }
 
-.team-item + .team-item {
+.team__item + .team__item {
   margin-left: 30px;
 }
 
-.team-item {
+.team__item {
   width: 270px;
   background-color: var(--primery-bgc);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -22,14 +22,14 @@
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-item-description {
+.team__item-wrapper {
   margin-top: 30px;
   margin-bottom: 30px;
   padding-left: 32px;
   padding-right: 32px;
 }
 
-.team-list .title {
+.team__name {
   margin-bottom: 10px;
 
   color: var(--title-text-color);
@@ -39,7 +39,7 @@
   text-align: center;
 }
 
-.team-list .text {
+.team__text {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.18;
