--- a/css/main.css
+++ b/css/main.css
@@ -746,13 +746,13 @@ body {
 }
 
 /* ============ Buttons (filtr) section ==========*/
-.buttons-list {
+.buttons__list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.button-item + .button-item {
+.buttons__item + .buttons__item {
   margin-left: 8px;
 }
 
@@ -778,38 +778,49 @@ body {
 }
 
 /* ============ Galery section ============*/
-.gallery-items {
+.gallery__list {
   display: flex;
   flex-wrap: wrap;
 }
 
-.gallery-link {
+.gallery__link {
   display: inline-block;
 }
 
-.gallery-item {
+.gallery__item {
   width: 370px;
 }
 
-.gallery-item:hover, .gallery-item:focus {
+.gallery__item:hover, .gallery__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.gallery-item:not(:nth-child(3n)) {
+.gallery__item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
-.gallery-item:not(:nth-last-child(-n + 3)) {
+.gallery__item:not(:nth-last-child(-n + 3)) {
   margin-bottom: 30px;
 }
 
-.gallery-image-thumb {
+.gallery__link {
+  color: var(--primery-text-color);
+  text-decoration: none;
+}
+
+.gallery__link:hover .gallery__description-thumb,
+.gallery__link:focus .gallery__description-thumb {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.gallery__image-thumb {
   position: relative;
   overflow: hidden;
   width: 100%;
 }
 
-.hover-overlay {
+.gallery__description-thumb {
   position: absolute;
   top: 0;
   left: 0;
@@ -824,41 +835,30 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.gallery-text {
-  font-size: 16px;
-  line-height: 1.87;
-}
-
-.gallery-link {
-  color: var(--primery-text-color);
-  text-decoration: none;
-}
-
-.gallery-link:hover .hover-overlay,
-.gallery-link:focus .hover-overlay {
-  opacity: 1;
-  transform: translateY(0);
-}
-
-.item-description-text {
+.gallery__description {
   padding: 63px 24px;
   font-size: 18px;
   line-height: 1.56;
   color: var(--primery-bgc);
 }
 
-.item-description {
+.gallery__title-thumb {
   padding: 20px 24px;
   border: 1px solid #eee;
   border-top: transparent;
 }
 
-.gallery-items .title {
+.gallery__title {
   margin-bottom: 4px;
   color: var(--title-text-color);
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
   letter-spacing: 0.06em;
+}
+
+.gallery__text {
+  font-size: 16px;
+  line-height: 1.87;
 }
 /*# sourceMappingURL=main.css.map */
